[package]
authors = ["Blas Rodriguez Irizar <rodrigblas@gmail.com>"]
edition = "2018"
name = "bondi"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/blasrodri/bondi"
description = "Single producer, multi consumer lock-free ring buffer (experimental)"
documentation = "https://docs.rs/bondi/"
categories = ["spmc", "concurrency"]
keywords = ["io", "lock-free", "non-blocking"]


[dependencies]
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "simple_benchmark"
harness = false